# port-killer

./: CHANGELOG.md  FRONTEND_STRUCTURE.md  README.md  RELEASE.md  RELEASE_TAG.md  SETUP.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
scripts/: create-release.ps1
src/: App.tsx  globals.css  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: ports.ts
src/components/features/ports/: KillDialog.tsx  PortDetailDialog.tsx  PortList.tsx  PortStats.tsx  PortTable.tsx  SearchBar.tsx
src/components/layout/: Header.tsx  LanguageSelector.tsx  SettingsMenu.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  pagination.tsx  resizable.tsx
src/hooks/: useAutoRefresh.ts  useLanguage.ts  usePorts.ts  useTheme.ts
src/i18n/: config.ts
src/i18n/locales/: en.json  vi.json
src/types/: ports.ts
src/utils/: tauri.ts
